
[package]
name = "leech"
version = "1.0.0"
authors = ["Thinking Minds LLC"]
edition = "2021"
build = "build.rs"
license = "Minds"
publish = false
description = "A testing aggressive worm"

[[bin]]
path = "./src/main.rs"
name = "leech"

[dependencies]
slint = "1.7.1"
serde_json = "1.0.121"
genpdf = "0.2.0"
simple_crypt = "0.2.3"
reqwest = "0.12.5"
mongodb = "3.0.1"
serde = { version = "1.0.204", features = ["derive"] }
futures = "0.3.30"
regex = "1.10.5"
tokio = {version = "1.39.2",features = ["full"] }

# Disable gettext on macOS due to https://github.com/Koka/gettext-rs/issues/114
[target.'cfg(not(target_os = "macos"))'.dependencies]
slint = { version="1.7.1", features=["gettext"] }

[build-dependencies]
slint-build = "1.7.1"


# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# crate-type = ["cdylib"]
#wasm# path = "main.rs"
#wasm#
#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"

[package.metadata.bundle]
identifier = "com.minds.new.leech"
